--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.firebase:firebase-auth-ktx'            //Login with google account
+    implementation 'com.google.android.gms:play-services-auth:20.4.1' //Login with google account
+
 }
