--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.ms-square:expandableTextView:0.1.4'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
