--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,5 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id("org.jetbrains.kotlin.plugin.serialization") version "1.8.20-RC"
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
