--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-
+            android:name=".booking.PersonalConfirmation"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".HotelSearch"
             android:exported="false">
             <meta-data
@@ -31,7 +37,6 @@
         </activity>
         <activity
             android:name=".services.login.SignUp"
-
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
