--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         android:theme="@style/Theme.StayFinder"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".EditHotelActivity"
+            android:exported="false" />
         <activity
             android:name=".HotelSearch"
             android:exported="false">
@@ -71,13 +73,11 @@
         <activity
             android:name=".HotelDetailActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
         <activity
-            android:name=".AddHotelActivity"
+            android:name=".services.hotel.AddHotelActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
