--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-
+            android:name=".RoomActivity"
+            android:exported="false" />
+        <activity
             android:name=".HotelSearch"
             android:exported="false">
             <meta-data
@@ -31,7 +33,6 @@
         </activity>
         <activity
             android:name=".services.login.SignUp"
-
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -70,10 +71,10 @@
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".HotelDetailActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".HotelDetailActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
