--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
             android:name=".DetailListActivity"
             android:exported="false" />
         <activity
-            android:name=".HotelDetailActivity2"
+            android:name=".hotel.hotel_detail.HotelDetailActivity2"
             android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -81,11 +81,11 @@
             android:value="AIzaSyD2iPE1hYByh63Ok_gGW8Dj1neT3aigGqM" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".hotel.hotel_detail.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".HotelDetailActivity"
+            android:name=".hotel.hotel_detail.HotelDetailActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
