--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,7 @@ dependencies {
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'me.relex:circleindicator:2.1.6'
+
+    implementation "com.github.kojofosu:Quantitizer:1.6.8"
+    implementation 'com.nex3z:toggle-button-group:1.2.3'
 }
