--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".services.hotel.RoomAddHotelDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".services.hotel.MapAddHotelActivity"
+            android:exported="false" />
+        <activity
             android:name=".partner.property.DetailProperty"
             android:exported="false">
             <meta-data
@@ -92,7 +98,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD2iPE1hYByh63Ok_gGW8Dj1neT3aigGqM" />
+            android:value="@string/MAP_API_KEY" />
 
         <activity
             android:name=".hotel.hotel_detail.MapsActivity"
