--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,26 +21,6 @@
         android:theme="@style/Theme.StayFinder"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD2iPE1hYByh63Ok_gGW8Dj1neT3aigGqM" />
-
-        <activity
-            android:name=".search.map.SearchByMapActivity"
-            android:exported="false"
-            android:label="Search by Map" />
         <activity
             android:name=".user.profile.ProfileActivity"
             android:exported="false" />
@@ -76,7 +56,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".search.HotelSearch"
+            android:name=".HotelSearch"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -102,6 +82,21 @@
         <activity
             android:name=".hotel.hotel_detail.HotelDetailActivity2"
             android:exported="false" />
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD2iPE1hYByh63Ok_gGW8Dj1neT3aigGqM" />
+
         <activity
             android:name=".hotel.hotel_detail.MapsActivity"
             android:exported="false"
