add: add coupon + order list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".PartnerAddCoupon"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".partner.property.DetailProperty"
@@ -111,7 +111,7 @@
             android:name=".services.hotel.AddHotelActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".partner.PartnerAddCoupon"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
