--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,31 +21,11 @@
         android:theme="@style/Theme.StayFinder"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
-
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/MAP_API_KEY" />
-
         <activity
-            android:name=".search.map.SearchByMapActivity"
-            android:exported="false"
-            android:label="Search by Map" />
-        <activity
-            android:name=".services.hotel.RoomAddHotelDetailActivity"
+            android:name=".PartnerAddCoupon"
             android:exported="false" />
         <activity
-            android:name=".services.hotel.MapAddHotelActivity"
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".partner.property.DetailProperty"
@@ -79,7 +59,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".search.HotelSearch"
+            android:name=".HotelSearch"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -105,6 +85,20 @@
         <activity
             android:name=".hotel.hotel_detail.HotelDetailActivity2"
             android:exported="false" />
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD2iPE1hYByh63Ok_gGW8Dj1neT3aigGqM" />
 
         <activity
             android:name=".hotel.hotel_detail.MapsActivity"
@@ -120,7 +114,7 @@
             android:name=".services.hotel.AddHotelActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".partner.PartnerAddCoupon"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
