--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".services.hotel.AddHotelConfirmActivity"
+            android:exported="false" />
+        <activity
             android:name=".services.room.RoomAddHotelDetailConfirmActivity"
             android:exported="false" />
         <activity
@@ -50,7 +53,7 @@
             android:exported="false"
             android:label="Search by Map" />
         <activity
-            android:name=".MainActivity"
+            android:name=".services.room.RoomAddHotelDetailActivity"
             android:exported="false" />
         <activity
             android:name=".services.hotel.MapAddHotelActivity"
@@ -127,7 +130,7 @@
             android:name=".services.hotel.AddHotelActivity"
             android:exported="false" />
         <activity
-            android:name=".services.room.RoomAddHotelDetailActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
