--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PartnerCouponList"
+            android:exported="false" />
+        <activity
+            android:name=".PartnerHotelList"
+            android:exported="false" />
+        <activity
             android:name=".services.hotel.AddHotelConfirmActivity"
             android:exported="false" />
         <activity
