add: coupon management UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".PartnerCouponList"
+            android:exported="false" />
+        <activity
+            android:name=".PartnerHotelList"
+            android:exported="false" />
+        <activity
             android:name=".services.hotel.AddHotelConfirmActivity"
             android:exported="false" />
         <activity
