--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".PartnerCouponList"
+            android:name=".partner.property.PartnerCouponList"
             android:exported="false" />
         <activity
-            android:name=".PartnerHotelList"
+            android:name=".partner.property.PartnerHotelList"
             android:exported="false" />
         <activity
             android:name=".services.hotel.AddHotelConfirmActivity"
