Revert "Merge branch 'feature/AT_hotel_edit_photo_location' of https://github.com/tientran505/hotel-booking-android-app into feature/AT_hotel_edit_photo_location"
This reverts commit 6cec7a649a8bd1040692b8ce73f9922be8dc9756, reversing
changes made to a2676db7e8c32223f66fef79408a725b56c89043.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
         <activity
             android:name=".services.room.RoomAddHotelDetailStep2Activity"
             android:exported="false" />
+
+        <activity
+            android:name=".partner.property.sub_property.EditImageListActivity"
+            android:exported="false" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/MAP_API_KEY" />
@@ -72,7 +76,7 @@
             android:name=".services.hotel.MapAddHotelActivity"
             android:exported="false" />
         <activity
-            android:name=".partner.property.sub_property.EditImageListActivity"
+            android:name=".partner.property.DetailProperty"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -146,7 +150,7 @@
             android:name=".partner.property.PartnerAddCoupon"
             android:exported="false" />
         <activity
-            android:name=".partner.property.DetailProperty"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
