update class for database read

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     implementation "com.github.kojofosu:Quantitizer:1.6.8"
     implementation 'com.nex3z:toggle-button-group:1.2.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
 }
